...
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="36dp"
            android:text="@string/amountText" />

        <TextView
            android:id="@+id/perPersonBox"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_marginTop="36dp" />

    </TableRow>

...
